--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "securesight-dashboard",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "private": true,
   "author": "suman-roy",
   "scripts": {
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.12.0",
+    "lucide-react": "^0.525.0",
     "next": "15.4.3",
     "prisma": "^6.12.0",
     "react": "19.1.0",
@@ -26,6 +27,6 @@
     "eslint": "^9",
     "eslint-config-next": "15.4.3",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4"
+    "tailwindcss": "^4.1.11"
   }
 }
