--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "securesight-dashboard",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "private": true,
   "author": "suman-roy",
   "scripts": {
@@ -14,11 +14,14 @@
   },
   "dependencies": {
     "@prisma/client": "^6.12.0",
+    "axios": "^1.11.0",
     "lucide-react": "^0.525.0",
     "next": "15.4.3",
     "prisma": "^6.12.0",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
